--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 
+<title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
+<meta name="description" content="Malvuln Intel provides a unique malware and c2 panel vulnerability threat intelligence feed. Discover security flaws in malware, c2 web panels, worms, and viruses for research and defense.">
