--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 
-<title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
+<head>
+  
+</head><title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
 <meta name="description" content="Malvuln Intel provides a unique malware and c2 panel vulnerability threat intelligence feed. Discover security flaws in malware, c2 web panels, worms, and viruses for research and defense.">
+
+<!-- Open Graph / Social Meta Tags -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://intel.malvuln.com/">
+<meta property="og:title" content="Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed">
+<meta property="og:description" content="Unique threat intelligence feed exposing vulnerabilities and exploits in malware, c2 panels, worms, and viruses. A research source for defenders and analysts.">
+<meta property="og:image" content="https://malvuln.com/malvuln-intel-preview.png">
+<meta property="og:site_name" content="Malvuln Intel">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed">
+<meta name="twitter:description" content="Exclusive intel feed on malware vulnerabilities and exploits.">
+<meta name="twitter:image" content="https://malvuln.com/malvuln-intel-preview.png">
+
+</head>
