--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
+  <meta name="theme-color" content="#000000">
   <meta name="description" content="Malvuln Intel provides a unique malware and C2 panel vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
 
   <!-- Open Graph / Social Meta Tags -->
@@ -16,3 +17,31 @@
   <meta name="twitter:description" content="Exclusive intel feed on malware vulnerabilities and exploits.">
   <meta name="twitter:image" content="https://malvuln.com/malvuln-intel-preview.png">
 </head>
+
+{
+  "name": "Malvuln Intel",
+  "short_name": "Malvuln",
+  "icons": [
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "display": "standalone"
+}
+
+
+
