--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <head>
   <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
   <meta name="theme-color" content="#000000">
-  <meta name="description" content="Malvuln Intel provides a unique malware and C2 panel vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
+  <meta name="description" content="Malvuln Intel provides a unique malware vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
+
+  <!-- Favicon and Branding -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Open Graph / Social Meta Tags -->
   <meta property="og:type" content="website">
@@ -17,31 +23,3 @@
   <meta name="twitter:description" content="Exclusive intel feed on malware vulnerabilities and exploits.">
   <meta name="twitter:image" content="https://malvuln.com/malvuln-intel-preview.png">
 </head>
-
-{
-  "name": "Malvuln Intel",
-  "short_name": "Malvuln",
-  "icons": [
-    {
-      "src": "/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    }
-  ],
-  "theme_color": "#000000",
-  "background_color": "#000000",
-  "display": "standalone"
-}
-
-
-
