--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Malvuln Intel provides a unique malware vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
 
