--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <head>
+  <meta charset="UTF-8">
   <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Malvuln Intel provides a unique malware vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
   <link rel="manifest" href="/site.webmanifest">
 
-  <!-- Favicon and Branding -->
+  <!-- Browser Theme Colors -->
+  <meta name="theme-color" content="#000000"> <!-- Android Chrome -->
+  <meta name="msapplication-TileColor" content="#000000"> <!-- Windows tiles -->
+  <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Enable full-screen -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- iOS Safari -->
+
+  <!-- Favicon / Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- Open Graph / Social Meta Tags -->
