--- a/index.html
+++ b/index.html
@@ -30,4 +30,14 @@
   <meta name="twitter:title" content="Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed">
   <meta name="twitter:description" content="Exclusive intel feed on malware vulnerabilities and exploits.">
   <meta name="twitter:image" content="https://malvuln.com/malvuln-intel-preview.png">
+
+  <style>
+  body {
+    background-color: #000000;
+    color: #ffffff; /* default text color */
+    margin: 0;
+    font-family: sans-serif;
+  }
+</style>
+  
 </head>
