--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
   <meta charset="UTF-8">
   <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
   <meta name="theme-color" content="#000000">
@@ -32,12 +34,16 @@
   <meta name="twitter:image" content="https://malvuln.com/malvuln-intel-preview.png">
 
   <style>
-  body {
-    background-color: #000000;
-    color: #ffffff; /* default text color */
-    margin: 0;
-    font-family: sans-serif;
-  }
-</style>
-  
+    body {
+      background-color: black;
+      color: white;
+      margin: 0;
+      font-family: sans-serif;
+    }
+  </style>
 </head>
+<body>
+  <h1>Malvuln Vulnerability Threat Intel</h1>
+</body>
+</html>
+
