--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
     }
   </style>
 </head>
-  <style>
-    body {
-      background-color: #000000;
-      color: #ffffff;
-      margin: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.5;
-      padding: 2rem;
-    }
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.1rem;
-      max-width: 700px;
-    }
-  </style>
+<style>
+  body {
+    background-color: #000000;
+    color: #ffffff;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+    padding: 1rem;
+  }
+  h1 {
+    font-size: 1.4rem;  /* smaller title */
+    margin-bottom: 0.5rem;
+  }
+  p {
+    font-size: 0.95rem; /* smaller paragraph text */
+    max-width: 650px;
+  }
+</style>
 </head>
 <body>
   <h6>Malvuln Vulnerability Threat Intelligence Feed</h6>
