--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
     color: #ffffff;
     margin: 0;
     font-family: Arial, sans-serif;
-    line-height: 1.5;
-    padding: 1rem;
+    line-height: 1.6;
+    padding: 2rem;
   }
   h1 {
-    font-size: 1.4rem;  /* smaller title */
-    margin-bottom: 0.5rem;
+    font-size: 1.6rem;   /* modest, not huge */
+    margin-bottom: 1rem;
   }
   p {
-    font-size: 0.95rem; /* smaller paragraph text */
-    max-width: 650px;
+    font-size: 1.1rem;   /* bigger than default for readability */
+    max-width: 700px;
   }
 </style>
+
 </head>
 <body>
   <h6>Malvuln Vulnerability Threat Intelligence Feed</h6>
