--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
     padding: 2rem;
   }
   h1 {
-    font-size: 1.6rem;   /* modest, not huge */
+    font-size: 2rem;    /* large, prominent heading */
+    font-weight: bold;
     margin-bottom: 1rem;
   }
   p {
-    font-size: 1.1rem;   /* bigger than default for readability */
+    font-size: 1rem;    /* normal body size */
     max-width: 700px;
   }
 </style>
