--- a/index.html
+++ b/index.html
@@ -48,19 +48,20 @@
     color: #ffffff;
     margin: 0;
     font-family: Arial, sans-serif;
-    line-height: 1.6;
-    padding: 2rem;
+    line-height: 1.5;
+    padding: 1.5rem;
   }
   h1 {
-    font-size: 2rem;    /* large, prominent heading */
+    font-size: 24px;   /* nice big title */
     font-weight: bold;
     margin-bottom: 1rem;
   }
   p {
-    font-size: 1rem;    /* normal body size */
+    font-size: 16px;   /* clean, normal paragraph */
     max-width: 700px;
   }
 </style>
+
 
 </head>
 <body>
