--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
     padding: 1.5rem;
   }
   h1 {
-    font-size: 24px;   /* nice big title */
+    font-size: 36px;   /* much larger headline */
     font-weight: bold;
     margin-bottom: 1rem;
   }
   p {
-    font-size: 16px;   /* clean, normal paragraph */
+    font-size: 16px;   /* normal body text */
     max-width: 700px;
   }
 </style>
+
 
 
 </head>
