--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </style>
 </head>
 <body>
-  <h3>Malvuln Vulnerability Threat Intelligence Feed</h3>
-  <p>Malvuln Intel provides a unique source of threat intelligence by exposing vulnerabilities and exploits in malware, C2 web panels, worms, and viruses. This resource is dedicated to defenders, researchers, and analysts tracking adversary software weaknesses.</p>
+  <h4>Malvuln Vulnerability Threat Intelligence Feed</h4>
+  <h4>Malvuln Intel provides a unique source of threat intelligence by exposing vulnerabilities and exploits in malware, C2 web panels, worms, and viruses. This resource is dedicated to defenders, researchers, and analysts tracking adversary software weaknesses.</h4>
 </body>
 </html>
 
