--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8">
-  <title>Malvuln Intel – Malware Vulnerability & Threat Intelligence Feed</title>
+  <title>Malvuln Intel – Malware Vulnerability Threat Intelligence Feed</title>
+  <link rel="canonical" href="https://intel.malvuln.com/">
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Malvuln Intel provides a unique malware vulnerability threat intelligence feed. Discover security flaws in malware, C2 web panels, worms, and viruses for research and defense.">
   <link rel="manifest" href="/site.webmanifest">
